# auto-ocr

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  auto-ocr  docker-compose.yml  docker-entrypoint.sh  dockerfile  pyproject.toml  setup.py
auto_ocr/: jobs_processor.py  main.py  utils.py  version.py
