[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "auto-ocr"
dynamic = ["version"]
description = "Tool to automatically OCR PDFs and copy them to a folder"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "c0d3d3v", email = "c0d3d3v@mag-keinen-spam.de" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education",
    "Topic :: Utilities",
]

dependencies = [
    "colorama>=0.4.6",
    "colorlog>=6.7.0",
    "ocrmypdf>=16.4.2",
    "orjson>=3.10.6"
]

[project.urls]
Homepage = "https://github.com/c0d3d3v/auto-ocr" 


[project.scripts]
auto-ocr = "auto_ocr.main:main"

# [tool.hatch.version]
# path = "auto_ocr/version.py"

[tool.hatch.version]
source = "vcs"
#tag-pattern = '^(?:[\w-]+-)?(?P<version>[vV]?\d+(?:\.\d+){0,2})(?:.*)?$'

[tool.hatch.build.hooks.vcs]
version-file = "auto_ocr/version.py"


[tool.distutils.bdist_wheel]
python-tag = "py310"

[tool.hatch.build]
include = [
    "auto_ocr/**",
    "README.md"
]


[tool.black]
line-length = 120
target-version = ['py38']
skip-string-normalization = true

[tool.isort]
profile = "black"